Fixed spacing between items

--- a/style.css
+++ b/style.css
@@ -30,5 +30,5 @@ img {
 .container {
   display: flex;
   justify-content: center;
-  gap: 48px;
+  gap: 52px;
 }
